--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
                     </p>
                 </div>
                 <div class="scroll-reveal">
-                    <img src="hero_workshop.png" alt="Professional Workshop" class="w-full h-auto rounded-2xl shadow-2xl">
+                    <img src="hero.jpg" alt="Professional Workshop" class="w-full h-auto rounded-2xl shadow-2xl">
                 </div>
             </div>
         </div>
@@ -355,7 +355,7 @@
                             <img src="https://kimi-web-img.moonshot.cn/img/i.etsystatic.com/0f5001ee6c9003fb5bd3a11194a734da7634433a.jpg" alt="Before" class="w-full h-full object-cover">
                         </div>
                         <div class="comparison-after">
-                            <img src="https://kimi-web-img.moonshot.cn/img/mydown-img2.yesky.com/0f8bcdb6eafc900b5366754789da3ace157cc9a5.png" alt="After" class="w-full h-full object-cover">
+                            <img src="comafter.jpg" alt="After" class="w-full h-full object-cover">
                         </div>
                         <div class="slider-handle">⟷</div>
                     </div>
@@ -371,7 +371,7 @@
                             <img src="https://kimi-web-img.moonshot.cn/img/xboxdesignlab.xbox.com/384a9c1205f46efd35a59cd612b0d1890d39978c.png" alt="Before" class="w-full h-full object-cover">
                         </div>
                         <div class="comparison-after">
-                            <img src="https://kimi-web-img.moonshot.cn/img/img.freepik.com/ad1fda9800d326e740598febd634809811b5ea12.jpg" alt="After" class="w-full h-full object-cover">
+                            <img src="comafter2.png" alt="After" class="w-full h-full object-cover">
                         </div>
                         <div class="slider-handle">⟷</div>
                     </div>
