--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="relative">
-                        <img src="hero_workshop.png" alt="Professional Controller Workshop" class="w-full h-auto rounded-2xl shadow-2xl">
+                        <img src="hero.jpg" alt="Professional Controller Workshop" class="w-full h-auto rounded-2xl shadow-2xl">
                         <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent rounded-2xl"></div>
                     </div>
                 </div>
@@ -272,17 +272,17 @@
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="portfolio-item scroll-reveal">
-                    <img src="https://kimi-web-img.moonshot.cn/img/img.freepik.com/ad1fda9800d326e740598febd634809811b5ea12.jpg" alt="Custom Controller 1" class="w-full h-64 object-cover">
+                    <img src="red_cont.png" alt="Custom Controller 1" class="w-full h-64 object-cover">
                     <div class="p-6">
-                        <h3 class="orbitron text-xl font-bold mb-2">Galaxy Edition</h3>
-                        <p class="text-gray-400 text-sm">Custom spray paint with metallic accents</p>
+                        <h3 class="orbitron text-xl font-bold mb-2">Glossy Red</h3>
+                        <p class="text-gray-400 text-sm">Custom spray paint gloss</p>
                     </div>
                 </div>
 
                 <div class="portfolio-item scroll-reveal">
-                    <img src="https://kimi-web-img.moonshot.cn/img/mydown-img2.yesky.com/0f8bcdb6eafc900b5366754789da3ace157cc9a5.png" alt="Custom Controller 2" class="w-full h-64 object-cover">
+                    <img src="chrome.jpg" alt="Custom Controller 2" class="w-full h-64 object-cover">
                     <div class="p-6">
-                        <h3 class="orbitron text-xl font-bold mb-2">Chrome Mirror</h3>
+                        <h3 class="orbitron text-xl font-bold mb-2">Chrome metallic</h3>
                         <p class="text-gray-400 text-sm">Vacuum metallized finish</p>
                     </div>
                 </div>
