--- a/about.html
+++ b/about.html
@@ -352,7 +352,7 @@
                     <h3 class="orbitron text-2xl font-bold mb-6 text-center">Vacuum Metallizing</h3>
                     <div class="comparison-slider h-80 bg-gray-800 relative">
                         <div class="comparison-before">
-                            <img src="https://kimi-web-img.moonshot.cn/img/i.etsystatic.com/0f5001ee6c9003fb5bd3a11194a734da7634433a.jpg" alt="Before" class="w-full h-full object-cover">
+                            <img src="stock.jpg" alt="Before" class="w-full h-full object-cover">
                         </div>
                         <div class="comparison-after">
                             <img src="comafter.jpg" alt="After" class="w-full h-full object-cover">
@@ -368,7 +368,7 @@
                     <h3 class="orbitron text-2xl font-bold mb-6 text-center">Custom Paint Work</h3>
                     <div class="comparison-slider h-80 bg-gray-800 relative">
                         <div class="comparison-before">
-                            <img src="https://kimi-web-img.moonshot.cn/img/xboxdesignlab.xbox.com/384a9c1205f46efd35a59cd612b0d1890d39978c.png" alt="Before" class="w-full h-full object-cover">
+                            <img src="stock.jpg" alt="Before" class="w-full h-full object-cover">
                         </div>
                         <div class="comparison-after">
                             <img src="comafter2.png" alt="After" class="w-full h-full object-cover">
