--- a/about.html
+++ b/about.html
@@ -352,10 +352,10 @@
                     <h3 class="orbitron text-2xl font-bold mb-6 text-center">Vacuum Metallizing</h3>
                     <div class="comparison-slider h-80 bg-gray-800 relative">
                         <div class="comparison-before">
-                            <img src="stock.jpg" alt="Before" class="w-full h-full object-cover">
+                            <img src="stock.jpg" alt="Before" class="w-full h-full object-cover object-center scale-95.5">
                         </div>
                         <div class="comparison-after">
-                            <img src="comafter.jpg" alt="After" class="w-full h-full object-cover">
+                            <img src="comafter.jpg" alt="After" class="w-full h-full object-cover object-center scale-105">
                         </div>
                         <div class="slider-handle">⟷</div>
                     </div>
@@ -368,10 +368,10 @@
                     <h3 class="orbitron text-2xl font-bold mb-6 text-center">Custom Paint Work</h3>
                     <div class="comparison-slider h-80 bg-gray-800 relative">
                         <div class="comparison-before">
-                            <img src="stock.jpg" alt="Before" class="w-full h-full object-cover">
+                            <img src="stock.jpg" alt="Before" class="w-full h-full object-cover object-center scale-105">
                         </div>
                         <div class="comparison-after">
-                            <img src="comafter2.png" alt="After" class="w-full h-full object-cover">
+                            <img src="comafter2.png" alt="After" class="w-full h-full object-cover object-center scale-100">
                         </div>
                         <div class="slider-handle">⟷</div>
                     </div>
