--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <h1 id="hero-title" class="orbitron text-5xl md:text-7xl font-black mb-6 metallic-text"></h1>
                         <p class="text-xl md:text-2xl text-gray-300 mb-8 leading-relaxed">
                             New Zealand's premier professional-grade custom painted controller specialists. 
-                            Using cutting-edge spray booth technology, vacuum metallizing, and PVD coating 
+                            Using cutting-edge spray booth technology, vacuum metallizing, and custom designs  
                             for the ultimate precision finish. We proudly serve NZ gamers with local expertise 
                             and fast turnaround times.
                         </p>
@@ -197,9 +197,9 @@
                     <div class="tech-icon mb-6 mx-auto">
                         🔬
                     </div>
-                    <h3 class="orbitron text-2xl font-bold mb-4 text-center">PVD Coating</h3>
+                    <h3 class="orbitron text-2xl font-bold mb-4 text-center">Custom Design</h3>
                     <p class="text-gray-300 text-center mb-6">
-                        Professional-grade custom painted controllers using hyper-modern Physical Vapor Deposition 
+                        Professional-grade custom painted controllers using professional equipment and trained specialists 
                         for extreme durability and unique aesthetic effects. Premium finish work only.
                     </p>
                     <ul class="text-sm text-gray-400 space-y-2">
@@ -250,10 +250,10 @@
                     <div class="bg-gradient-to-br from-orange-600 to-red-600 w-20 h-20 rounded-full flex items-center justify-center text-3xl mb-6">
                         ⚡
                     </div>
-                    <h3 class="orbitron text-2xl font-bold mb-4">PVD Machine Technology</h3>
+                    <h3 class="orbitron text-2xl font-bold mb-4">Custom design </h3>
                     <p class="text-gray-300">
-                        Physical Vapor Deposition creates ultra-thin, extremely hard coatings with 
-                        unique optical properties and exceptional wear resistance.
+                        Custom designs allow the ultimate in personalization, with professional-grade finishes
+                        that are both visually stunning and highly durable.
                     </p>
                 </div>
             </div>
