--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <a href="index.html" class="flex items-center">
-                        <img src="ctrlcraft.png" alt="CtrlCraft Logo" class="h-10 w-10 mr-3">
+                        <img src="ctrlcraft.png" alt="CtrlCraft Logo" class="h-10 w-10 mr-3 rounded-lg">
                         <span class="orbitron text-xl font-bold metallic-text">CtrlCraft</span>
                     </a>
                 </div>
@@ -137,7 +137,7 @@
                 </div>
                 <div class="scroll-reveal">
                     <div class="relative">
-                        <img src="stock.jpg" alt="Crafting Process" class="rounded-2xl shadow-2xl">
+                        <img src="hero.jpg" alt="Crafting Process" class="rounded-2xl shadow-2xl">
                         <div class="absolute inset-0 bg-gradient-to-t from-black via-transparent to-transparent rounded-2xl"></div>
                     </div>
                 </div>
@@ -301,10 +301,10 @@
                     <h3 class="orbitron text-2xl font-bold mb-6 text-center">Custom Paint</h3>
                     <div class="comparison-slider h-80 bg-gray-800 relative">
                         <div class="comparison-before">
-                            <img src="stock.jpg" alt="Before" class="w-full h-full object-cover object-center scale-95.5">
+                            <img src="stock.jpg" alt="Before" class="w-full h-full object-cover object-center scale-100">
                         </div>
                         <div class="comparison-after">
-                            <img src="stock.jpg" alt="After" class="w-full h-full object-cover object-center scale-105 filter hue-rotate-90 brightness-110">
+                            <img src="comafter2.png" alt="After" class="w-full h-full object-cover object-center scale-95">
                         </div>
                         <div class="slider-handle">⟷</div>
                     </div>
@@ -327,13 +327,13 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-8 mt-12">
                     <div class="text-center">
                         <div class="text-4xl mb-4">🛡️</div>
-                        <h3 class="orbitron text-lg font-bold mb-2">Lifetime Warranty</h3>
+                        <h3 class="orbitron text-lg font-bold mb-2">Lifetime Durability</h3>
                         <p class="text-gray-400 text-sm">On all finishes against defects and premature wear</p>
                     </div>
                     <div class="text-center">
                         <div class="text-4xl mb-4">🔄</div>
-                        <h3 class="orbitron text-lg font-bold mb-2">Free Touch-ups</h3>
-                        <p class="text-gray-400 text-sm">Complimentary maintenance for the first year</p>
+                        <h3 class="orbitron text-lg font-bold mb-2">Guaranteed Quality</h3>
+                        <p class="text-gray-400 text-sm">Our ode is to provide professional quality services to gamers and clients</p>
                     </div>
                     <div class="text-center">
                         <div class="text-4xl mb-4">💯</div>
@@ -349,7 +349,7 @@
     <footer class="bg-black py-12 border-t border-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <div class="flex items-center justify-center mb-4">
-                <img src="ctrlcraft.png" alt="CtrlCraft Logo" class="h-8 w-8 mr-2">
+                <img src="ctrlcraft.png" alt="CtrlCraft Logo" class="h-8 w-8 mr-2 rounded-lg">
                 <span class="orbitron text-xl font-bold metallic-text">CtrlCraft</span>
             </div>
             <p class="text-gray-400 text-sm">
