--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <a href="index.html" class="flex items-center">
-                        <img src="ctrlcraft.png" alt="CtrlCraft Logo" class="h-10 w-10 mr-3">
+                        <img src="ctrlcraft.png" alt="CtrlCraft Logo" class="h-10 w-10 mr-3 rounded-lg">
                         <span class="orbitron text-xl font-bold metallic-text">CtrlCraft</span>
                     </a>
                 </div>
@@ -351,7 +351,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="flex items-center mb-4 md:mb-0">
-                    <img src="ctrlcraft.png" alt="CtrlCraft Logo" class="h-8 w-8 mr-3">
+                    <img src="ctrlcraft.png" alt="CtrlCraft Logo" class="h-8 w-8 mr-3 rounded-lg">
                     <span class="orbitron text-lg font-bold metallic-text">CtrlCraft</span>
                 </div>
                 <div class="text-center md:text-right">
