--- a/inquiry.html
+++ b/inquiry.html
@@ -187,8 +187,8 @@
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
                     <a href="index.html" class="flex items-center">
-                        <div class="h-10 w-10 mr-3 bg-gradient-to-br from-teal-400 to-blue-500 rounded-lg flex items-center justify-center">
-                            <span class="orbitron text-white font-bold text-lg">C</span>
+                        <div class="h-10 w-10 flex items-center justify-center">
+                            <img src="ctrlcraft.png" alt="CtrlCraft Logo" class="h-10 w-10 mr-3 rounded-lg">
                         </div>
                         <span class="orbitron text-xl font-bold metallic-text">CtrlCraft</span>
                     </a>
@@ -479,8 +479,8 @@
     <footer class="bg-black py-12 border-t border-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <div class="flex items-center justify-center mb-4">
-                <div class="h-8 w-8 mr-2 bg-gradient-to-br from-teal-400 to-blue-500 rounded-lg flex items-center justify-center">
-                    <span class="orbitron text-white font-bold text-sm">C</span>
+                <div class="flex items-center justify-center">
+                    <img src="ctrlcraft.png" alt="CtrlCraft Logo" class="h-10 w-10 mr-3 rounded-lg">
                 </div>
                 <span class="orbitron text-xl font-bold metallic-text">CtrlCraft</span>
             </div>
