--- a/inquiry.html
+++ b/inquiry.html
@@ -440,8 +440,8 @@
 
                     <!-- Additional Notes -->
                     <div>
-                        <label for="additional-notes" class="block text-sm font-medium text-gray-300 mb-2">Additional Notes</label>
-                        <textarea id="additional-notes" name="additional_notes" rows="3"
+                        <label for="additional-notes" class="block text-sm font-medium text-gray-300 mb-2">Address *</label>
+                        <textarea id="additional-notes" name="additional_notes" rows="3" required
                                   class="form-input w-full px-4 py-3 rounded-lg" 
                                   placeholder="Any additional information, special requirements, or questions..."></textarea>
                     </div>
