--- a/inquiry.html
+++ b/inquiry.html
@@ -275,8 +275,8 @@
                             </div>
                             <div class="service-option p-4 rounded-lg text-center" data-controller="nintendo">
                                 <div class="text-2xl mb-2">🕹️</div>
-                                <div class="font-medium">Nintendo</div>
-                                <div class="text-xs text-gray-400">Switch Pro/Joy-Con</div>
+                                <div class="font-medium">Other</div>
+                                <div class="text-xs text-gray-400">Other Controllers (Specify Below)</div>
                             </div>
                         </div>
                         <input type="hidden" id="selected-controller" name="controller_type" required>
