--- a/inquiry.html
+++ b/inquiry.html
@@ -276,7 +276,7 @@
                             <div class="service-option p-4 rounded-lg text-center" data-controller="nintendo">
                                 <div class="text-2xl mb-2">🕹️</div>
                                 <div class="font-medium">Other</div>
-                                <div class="text-xs text-gray-400">Other Controllers (Specify Below)</div>
+                                <div class="text-xs text-gray-400">Other Controller (Specify Below)</div>
                             </div>
                         </div>
                         <input type="hidden" id="selected-controller" name="controller_type" required>
