--- a/inquiry.html
+++ b/inquiry.html
@@ -443,7 +443,7 @@
                         <label for="additional-notes" class="block text-sm font-medium text-gray-300 mb-2">Address *</label>
                         <textarea id="additional-notes" name="additional_notes" rows="3" required
                                   class="form-input w-full px-4 py-3 rounded-lg" 
-                                  placeholder="Any additional information, special requirements, or questions..."></textarea>
+                                  placeholder="Please state your shipping information for where you want the product returned to..."></textarea>
                     </div>
 
                     <!-- Shipping Requirement Checkbox -->
